--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -221,7 +221,7 @@
 "friends_accept" = "Прийняти заявку";
 "send_message" = "Відправити повідомлення";
 "incoming_req" = "Підписники";
-"outcoming_req" = "Исходящие";
+"outcoming_req" = "Вихідні";
 "req" = "Заявки";
 "outcoming_req" = "Заявки";
 "friends_online" = "Друзі онлайн";
