--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -849,6 +849,8 @@
 "support_new_title" = "Введите тему вашего обращения";
 "support_new_content" = "Опишите проблему или предложение";
 
+"reports" = "Жалобы";
+
 "support_rate_good_answer" = "Это хороший ответ";
 "support_rate_bad_answer" = "Это плохой ответ";
 "support_good_answer_user" = "Вы оставили положительный отзыв.";
