Russian: Fix typo in page edit

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -992,7 +992,7 @@
 "changes_saved_comment" = "Новые данные появятся на вашей странице";
 
 "photo_saved" = "Фотография сохранена";
-"photo_saved_comment" = "Новое изображние профиля появится у вас на странице";
+"photo_saved_comment" = "Новое изображение профиля появится у вас на странице";
 
 "shared_succ" = "Запись появится на вашей стене. Нажмите на уведомление, чтобы перейти к своей стене.";
 
