--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1206,3 +1206,16 @@
 "url_is_banned_default_reason" = "Ссылка, по которой вы попытались перейти, может вести на сайт, который был создан с целью обмана пользователей и получения за счёт этого прибыли.";
 "url_is_banned_title" = "Ссылка на подозрительный сайт";
 "url_is_banned_proceed" = "Перейти по ссылке";
+
+/* Names */
+"names_new" = "Новые";
+"names_approved" = "Принятые";
+"names_rejected" = "Отклонённые";
+"names_showed" = "Показано $1 заявок на смену имени (всего $2)";
+"approve" = "Одобрить";
+"reject" = "Отклонить";
+"approved" = "Одобрена";
+"rejected" = "Отклонена";
+"name_change_request" = "Смена имени";
+"name_change_request_pending" = "Ваша заявка на смену имени находится на рассмотрении модераторами.";
+"name_change_request_rejected" = "Ваша заявка на смену имени была отклонена модераторами. Вы можете подать новую, когда это сообщение исчезнет.";
