--- a/locales/am.strings
+++ b/locales/am.strings
@@ -17,6 +17,8 @@
 "password" = "Գաղտնաբառ";
 "registration" = "Գրանցում";
 "forgot_password" = "Մոռացե՞լ եք գաղտնաբառը";
+"checkbox_in_registration" = "Ես համաձայն եմ <a href='/privacy'>կոնֆիդենցիալության քաղաքականությանն</a> ու <a href='/about'>կայքի կանոնադրությանը</a>։";
+"checkbox_in_registration_unchecked" = "Դուք պետք է համաձայնվեք պայմանների հետ նախքան գրանցվելը։";
 
 "login_failed" = "Չհաջողվեց մուտք գործել";
 "invalid_username_or_password" = "Սխալ օգտատիրոջ անուն կամ գաղտնաբառ։ Դուք կարող եք <a href='/restore'>վերականգնել ձեր գաղտնաբառը</a>։";
@@ -93,6 +95,9 @@
 "years_many" = "$1 տարեկան";
 "years_other" = "$1 տարեկան";
 
+"show_my_birthday" = "Ցույց տալ ծննդյան օրը";
+"show_only_month_and_day" = "Ցուցադրել միայն ամիսն ու օրը";
+
 "relationship" = "Ընտանեկան դրություն";
 
 "relationship_0" = "Ընտրված չէ";
@@ -144,8 +149,8 @@
 
 "updated_at" = "Թարմացված է $1";
 
-"user_banned" = "Ցավո՛ք, մենք ստիպված <b>$1</b>-ի էջը կասեցրել ենք։";
-"user_banned_comment" = "Մոդերատորի մեկնաբանությունը․ ";
+"user_banned" = "Ցավո՛ք, մենք ստիպված կասեցրել ենք <b>$1</b>-ի էջը։";
+"user_banned_comment" = "Մոդերատորի մեկնաբանությունը․";
 
 /* Wall */
 
@@ -154,6 +159,10 @@
 "post_writes_m" = "գրել է";
 "post_writes_f" = "գրել է";
 "post_writes_g" = "հրապարակել են";
+"post_deact_m" = "ջնջել է էջը հետևյալ բառերով.";
+"post_deact_f" = "ջնջել է էջը հետևյալ բառերով.";
+"post_deact_silent_m" = "սուս ու փուս ջնջել է էջը։";
+"post_deact_silent_f" = "սուս ու փուս ջնջել է էջը։";
 "wall" = "Պատ";
 "post" = "Գրություն";
 "write" = "Գրել";
@@ -167,7 +176,7 @@
 "comments_tip" = "Եղե՛ք առաջինը ով կթողնի իր կարծիքը։";
 "your_comment" = "Ձեր մեկնաբանությունը";
 "shown" = "Ցուցադրված է";
-"x_out_of" = "$1 –ը ՝";
+"x_out_of" = "$1–ը";
 "wall_zero" = "գրություն չկա";
 "wall_one" = "մեկ գրություն";
 "wall_few" = "$1 գրություն";
@@ -215,6 +224,8 @@
 "incoming_req" = "Բաժանորդներ";
 "outcoming_req" = "Հայցեր";
 "req" = "Հայցեր";
+"friends_online" = "Ընկերները ցանցում";
+"all_friends" = "Բոլոր ընկերները"; 
 
 "req_zero" = "Ոչ մի հայտ չի գտնվել...";
 "req_one" = "Գտնվեց մեկ հայտ";
@@ -245,6 +256,12 @@
 "subscriptions_few" = "$1 բաժանորդագրություն";
 "subscriptions_many" = "$1 բաժանորդագրություն";
 "subscriptions_other" = "$1 բաժանորդագրություն";
+
+"friends_list_online_zero" = "Դուք դեռ չունեք ցանցի մեջ գտնվող ընկերներ";
+"friends_list_online_one" = "Ձեր $1 ընկերը ցանցի մեջ է";
+"friends_list_online_few" = "Ձեր $1 ընկերները ցանցի մեջ են";
+"friends_list_online_many" = "Ձեր $1 ընկերները ցանցի մեջ են";
+"friends_list_online_other" = "Ձեր $1 ընկերները ցանցի մեջ են";
 
 /* Group */
 
@@ -364,6 +381,10 @@
 "edit_note" = "Խմբագրել նշումը";
 "actions" = "Գործողություններ";
 "notes_start_screen" = "Նշումների շնորհիվ Դուք կարող եք կիսվել ընկերների հետ տարբեր իրադարձություններով, և իմանալ թե ինչ է կատարվում իրենց մոտ։";
+"note_preview" = "Նախադիտում";
+"note_preview_warn" = "Սա ընդամենը նախադիտում է";
+"note_preview_warn_details" = "Պահպանելուց հետո նշումները կարող են այլ տեսք ունենալ։ Ու մեկ էլ, այդքան հաճախ նախադիտում մի արեք։";
+"note_preview_empty_err" = "Ինչու՞ նախադիտել նշումը առանց վերնագրի կամ բովանդակության։";
 
 "edited" = "Խմբագրված է";
 
@@ -428,6 +449,7 @@
 "avatar" = "Ավատար";
 "privacy" = "Գաղտնիություն";
 "interface" = "Արտաքին տեսք";
+"security" = "Անվտանգություն";
 
 "profile_picture" = "Էջի նկար";
 
@@ -445,7 +467,7 @@
 
 "arbitrary_avatars" = "Կամայական";
 "cut" = "Կտրվածք";
-"round_avatars" = "Կլոր ավատար";
+"round_avatars" = "Շրջանաձև";
 
 "apply_style_for_this_device" = "Հաստատել տեսքը միայն այս սարքի համար";
 
@@ -507,6 +529,33 @@
 "ad_poster" = "Գովազդային վահանակ";
 
 "email_change_confirm_message" = "Որպեսզի Ձեր փոփոխությունը կատարվի, հաստատե՛ք Ձեր նոր էլեկտրոնային հասցեն։ Այնտեղ մենք ուղարկել ենք հրահանգները։";
+
+"profile_deactivate" = "Էջի հեռացում";
+"profile_deactivate_button" = "Ջնջել էջը";
+"profile_deactivate_header" = "Մենք ցավում ենք որ Դուք ցանկանում եք ջնջել ձեր էջը։ Դրա համար Դուք կարող եք նշել հեռացման պատճառը և Ձեր կարծիքը այդ առումով։ Մեզ համար կարևոր է Ձեր կարծիքը, որպեսզի դարձնենք կայքը ավելի լավը։";
+"profile_deactivate_reason_header" = "Խնդրում ենք, նշել Ձեր էջի ջնջման պատճառները";
+"profile_deactivate_reason_1" = "Ես ունեմ այլ էջ այս կայնքում";
+"profile_deactivate_reason_1_text" = "Ես նոր էջ եմ սկսել ու ցանկանում եմ սկսել ամեն ինչ նորից";
+"profile_deactivate_reason_2" = "Կայքն ինձնից շատ ժամանակ է խլում";
+"profile_deactivate_reason_2_text" = "Թեկուզ այս կայքը լավն է, բայց ցավոք ինձնից ահագին ժամանակ է խլում։";
+"profile_deactivate_reason_3" = "Կայքը բազմաթիվ անցանկանալի մատերիալներ է պարունակում";
+"profile_deactivate_reason_3_text" = "Ես բազմաթիվ պոռնոգրաֆիա ու անօրինական կինոներ եմ գրել – բոլ ա։ Հիմա հավես չկա։";
+"profile_deactivate_reason_4" = "Ինձ անհանգստացնում է իմ տվյալների անվտանգությունը";
+"profile_deactivate_reason_4_text" = "Ինձ հետևում են ու շատ վախենալու է ինձ այստեղ գտնվելը";
+"profile_deactivate_reason_5" = "Իմ էջը չեն մեկնաբանում";
+"profile_deactivate_reason_5_text" = "Ինձ այստեղ շան տեղ դնող չկա ու ես տխրում եմ։ Դուք կզղջաք որ ես հեռացա...";
+"profile_deactivate_reason_6" = "Այլ պատճառ";
+
+"profile_deactivated_msg" = "Ձեր էջը <b>ջնջված է</b>։<br/><br/>Եթե Դուք ուզենաք նորից օգտվել Ձեր էջով, կարող եք <a href='/settings/reactivate'>ապաակտիվացնել այն</a> մինչև $1:";
+"profile_deactivated_status" = "Էջը ջնջված է";
+"profile_deactivated_info" = "Օգտատիրոջ էջը հեռացվել է։<br/>Մանրամասն տեղեկատվությունը բացակայում է։";
+
+"share_with_friends" = "Պատմել ընկերներին";
+
+"end_all_sessions" = "Դուրս գալ բոլոր սեսսիաներից";
+"end_all_sessions_description" = "Եթե ցանկանում եք դուրս գալ $1–ից ամեն դեվայսից, սեղմե՛ք ներքևի կոճակը";
+
+"end_all_sessions_done" = "Բոլոր սեսսիաները նետված են, ներառյալ բջջային հավելվածները";
 
 /* Two-factor authentication */
 
@@ -708,6 +757,75 @@
 
 "users_gifts" = "Նվերներ";
 
+/* Apps */
+
+"app" = "Հավելված";
+"apps" = "Հավելվածներ";
+"my_apps" = "Իմ հավելվածները";
+"all_apps" = "Բոլոր հավելվածները";
+"installed_apps" = "Տեղադրված հավելվածները";
+"own_apps" = "Կառավարում";
+"own_apps_alternate" = "Իմ այլ հավելվածները";
+
+"app_play" = "միացնել";
+"app_uninstall" = "անջատել";
+"app_edit" = "խմբագրել";
+"app_dev" = "Մշակող";
+
+"create_app" = "Ստեղծել հավելված";
+"edit_app" = "Խմբագրել հավելվածը";
+"new_app" = "Նոր հավելված";
+"app_news" = "Նորություններով նշում";
+"app_state" = "Կարգավիճակ";
+"app_enabled" = "Միացված է";
+"app_creation_hint_url" = "URL–ում նշեք կոնկրետ հասցեն իր սխեմայով (https), պորտով (80) և անհրաժեշտ միացման կարգավորումներով։";
+"app_creation_hint_iframe" = "Ձեր հավելվածը բացված է iframe–ով։";
+"app_balance" = "Հավելվածի հաշվին կա <b>$1</b> ձայն։";
+"app_users" = "Ձեր հավելվածով օգտվում է <b>$1</b> հոգի։";
+"app_withdrawal_q" = "դուրս բերե՞լ";
+"app_withdrawal" = "Միջոցների դուրս բերում";
+"app_withdrawal_empty" = "Կներեք, դատարկությունը չհաջողվեց դուրս բերել։";
+"app_withdrawal_created" = "$1 ձայնի դուրս բերման հայտը գրանցված է։ Սպասեք հաշվառմանը։";
+
+"appjs_payment" = "Գնման վճարում";
+"appjs_payment_intro" = "Դուք պատրաստվում եք հավելվածի գնումը վճարել";
+"appjs_order_items" = "Գնման ցուցակ";
+"appjs_payment_total" = "Վճարման ընդհանուր գին";
+"appjs_payment_confirm" = "Վճարել";
+"appjs_err_funds" = "Չհաջողվե՛ց վճարել գնումը անբավարար միջոցների համար։";
+
+"appjs_wall_post" = "Հրապարակել գրությունտը";
+"appjs_wall_post_desc" = "ցանկանում է Ձեր պատին գրություն թողնել";
+
+"appjs_sperm_friends" = "ձեր ընկերներին";
+"appjs_sperm_friends_desc" = "ավելացնել օգտատերերին որպես ընկերներ և կարդալ Ձեր գրությունները";
+"appjs_sperm_wall" = "ձեր պատին";
+"appjs_sperm_wall_desc" = "դիտել Ձեր լուրերը, կարդալ պատն ու թողել գրություններ";
+"appjs_sperm_messages" = "ձեր նամակներին";
+"appjs_sperm_messages_desc" = "կարդալ և գրել նամակներ Ձեր անունից";
+"appjs_sperm_groups" = "ձեր հանրություններին";
+"appjs_sperm_groups_desc" = "դիտել Ձեր խմբերի ցուցակն ու բաժանորդագրել դեպի այլ խմբեր";
+"appjs_sperm_likes" = "լայքելու ֆունկցիոնալին";
+"appjs_sperm_likes_desc" = "տեղադրել և հանել \"Դուր գալու\" ռեակցիաները ձայնագրություններից";
+
+"appjs_sperm_request" = "Հասանելիության հարցում";
+"appjs_sperm_requests" = "հասանելիություն է խնդրում";
+"appjs_sperm_can" = "Հավելվածը կարող է";
+"appjs_sperm_allow" = "Թույլատրել";
+"appjs_sperm_disallow" = "Չթույլատրել";
+
+"app_uninstalled" = "Հավելվածն անջատված է";
+"app_uninstalled_desc" = "Այն Ձեր անունից էլ չի կարող կատարել գործողություններ։";
+"app_err_not_found" = "Հավելվածը չի գտնվել";
+"app_err_not_found_desc" = "Սխալ կամ անջատված իդենտիֆիկատոր։";
+"app_err_forbidden_desc" = "Այս հավելվածը Ձերը չէ։";
+"app_err_url" = "Սխալ հասցե";
+"app_err_url_desc" = "Հավելվածի հասցեն չանցավ ստուգումը. համոզվե՛ք որ այն ճիշտ է գրված:";
+"app_err_ava" = "Չհաջողվե՛ց վերբեռնել ավատարը:";
+"app_err_ava_desc" = "Ավատարը չափազանց մեծ և ծուռ է. ընդհանուր բնույթի սխալ №$res.";
+"app_err_note" = "Չհաջողվե՛ց ամրացնել նորությունների նիշքը";
+"app_err_note_desc" = "Համոզվե՛ք որ հղումը ճիշտ է և պատկանում է Ձեզ։";
+
 /* Support */
 
 "support_opened" = "Բաց";
@@ -767,7 +885,12 @@
 "banned_alt" = "Օգտատերը արգելափակված է";
 "banned_1" = "Կներե՛ք, <b>$1</b>, բայց Դուք կասեցված եք։";
 "banned_2" = "Պատճառը հետևյալն է․ <b>$1</b>. Ափսոս, բայց մենք ստիպված Ձեզ հավերժ ենք կասեցրել;";
+"banned_perm" = "Ցավոք, մենք ստիպված արգելափակել ենք Ձեզ ընդմիշտ։";
+"banned_until_time" = "Այս անգամ մենք ստիպված արգելափակել ենք Ձեզ մինչև <b>$1</b>";
 "banned_3" = "Դուք դեռ կարող եք <a href=\"/support?act=new\">գրել նամակ աջակցության ծառայությանը</a>, եթե համարում եք որ դա սխալմունք է, կամ էլ կարող եք <a href=\"/logout?hash=$1\">դուրս գալ</a>։";
+"banned_unban_myself" = "Ապասառեցնել էջը";
+"banned_unban_title" = "Ձեր հաշիվը ապասառեցված է։";
+"banned_unban_description" = "Աշխատե՛ք այլևս չխախտել կանոնները։";
 
 /* Registration confirm */
 
@@ -996,6 +1119,17 @@
 "admin_commerce_disabled" = "Կոմմերցիան անջատված է համակարգային ադմինիստրատորի կողմից";
 "admin_commerce_disabled_desc" = "Վաուչերների և նվերների կարգավորումները կպահպանվեն, բայց ոչ մի ազդեցություն չեն ունենա։";
 
+"admin_banned_links" = "Արգելափակված հղումներ";
+"admin_banned_link" = "Հղում";
+"admin_banned_domain" = "Դոմեն";
+"admin_banned_link_description" = "Պրոտոկոլով (https://example.com/)";
+"admin_banned_link_regexp" = "Ռեգուլյար արտահայտություն";
+"admin_banned_link_regexp_description" = "Տեղադրվում է վերոնշյալ դոմենից հետո։ Մի լրացրե՛ք, եթե ցանկանում եք արգելափակել ամբողջ դոմենը";
+"admin_banned_link_reason" = "Պատճառ";
+"admin_banned_link_initiator" = "Նախաձեռնող";
+"admin_banned_link_not_specified" = "Հղումը նշված չէ";
+"admin_banned_link_not_found" = "Հղումը չի գտնվել";
+
 /* Paginator (deprecated) */
 
 "paginator_back" = "Հետ";
@@ -1059,3 +1193,21 @@
 
 "cookies_popup_content" = "Cookie բառը անգլերենից նշանակում է թխվածքաբլիթ, իսկ թխվածքաբլիթը համեղ է։ Մեր կայքը չի ուտում թխվածք, բայց օգտագործում է այն ուղղակի սեսսիան կողմնորոշելու համար։ Ավելի մանրամասն կարող եք ծանոթանալ մեր <a href='/privacy'>գաղտնիության քաղաքականությանը</a> հավելյալ ինֆորմացիայի համար։";
 "cookies_popup_agree" = "Համաձայն եմ";
+
+/* Away */
+
+"url_is_banned" = "Անցումն անհնար է";
+"url_is_banned_comment" = "Ադմինիստրացիան <b>$1</b> խորհուրդ չի տալից անցնել այս հղումով։";
+"url_is_banned_comment_r" = "Ադմինիստրացիան <b>$1</b> խորհուրդ չի տալից անցնել այս հղումով։<br><br>Պատճառը: <b>$2</b>";
+"url_is_banned_default_reason" = "Հղումը դեպի կայք կարող է ստեղծված լինել շորթողներից ՝ օգտատերերին խաբելու և խարդախության նպատակներով, շահույթ ստանալու համար։";
+"url_is_banned_title" = "Հղում դեպի կասկածելի կայք";
+"url_is_banned_proceed" = "Անցնել հղումով";
+
+/* Maintenance */
+
+"global_maintenance" = "Տեխնիկական աշխատանքներ";
+"section_maintenance" = "Բաժինը անհասանելի է";
+"undergoing_global_maintenance" = "Ցավոք սրտի, հիմա հոսքը փակված է տեխնիկական աշխատանքներ անցկացնելու համար։ Մենք արդեն աշխատում ենք խնդիրները շտկելու ուղղությամբ։ Խնդրում ենք այցելել մի քիչ ուշ։";
+"undergoing_section_maintenance" = "Ցավոք սրտի, <b>$1</b> բաժինը ժամանակավորապես անհասանելի է։ Մենք արդեն աշխատում ենք խնդիրները շտկելու ուղղությամբ։ Խնդրում ենք այցելել մի քիչ ուշ։";
+
+"topics" = "Թեմաներ";
