Update am.strings (#737)
исправлен недоперевод (543 строка)

Co-authored-by: Vladimir Barinov <veselcraft@icloud.com>

--- a/locales/am.strings
+++ b/locales/am.strings
@@ -540,7 +540,7 @@
 "profile_deactivate_reason_2_text" = "Թեկուզ այս կայքը լավն է, բայց ցավոք ինձնից ահագին ժամանակ է խլում։";
 "profile_deactivate_reason_3" = "Կայքը բազմաթիվ անցանկանալի մատերիալներ է պարունակում";
 "profile_deactivate_reason_3_text" = "Ես բազմաթիվ պոռնոգրաֆիա ու անօրինական կինոներ եմ գրել – բոլ ա։ Հիմա հավես չկա։";
-"profile_deactivate_reason_4" = "Меня беспокоит безопасность моих данных";
+"profile_deactivate_reason_4" = "Ինձ անհանգստացնում է իմ տվյալների անվտանգությունը";
 "profile_deactivate_reason_4_text" = "Ինձ հետևում են ու շատ վախենալու է ինձ այստեղ գտնվելը";
 "profile_deactivate_reason_5" = "Իմ էջը չեն մեկնաբանում";
 "profile_deactivate_reason_5_text" = "Ինձ այստեղ շան տեղ դնող չկա ու ես տխրում եմ։ Դուք կզղջաք որ ես հեռացա...";
