--- a/locales/en.strings
+++ b/locales/en.strings
@@ -154,6 +154,9 @@
 "post_deact_f" = "deleted her profile saying:";
 "post_deact_silent_m" = "silently deleted his profile.";
 "post_deact_silent_f" = "silently deleted her profile.";
+"post_on_your_wall" = "on your wall";
+"post_on_group_wall" = "in $1";
+"post_on_user_wall" = "on $1's wall";
 "wall" = "Wall";
 "post" = "Post";
 "write" = "Write";
