--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -162,6 +162,9 @@
 "post_deact_f" = "удалила страницу со словами:";
 "post_deact_silent_m" = "молча удалил свою страницу.";
 "post_deact_silent_f" = "молча удалила свою страницу.";
+"post_on_your_wall" = "на вашей стене";
+"post_on_group_wall" = "в $1";
+"post_on_user_wall" = "на стене $1";
 "wall" = "Стена";
 "post" = "Запись";
 "write" = "Написать";
