--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -162,6 +162,9 @@
 "post_deact_f" = "видалила сторінку зі словами:";
 "post_deact_silent_m" = "мовчки видалив свою сторінку.";
 "post_deact_silent_f" = "мовчки видалила свою сторінку.";
+"post_on_your_wall" = "на вашій стіні";
+"post_on_group_wall" = "в $1";
+"post_on_user_wall" = "на стіні $1";
 "wall" = "Стіна";
 "post" = "Запис";
 "write" = "Написати";
@@ -1209,3 +1212,12 @@
 "url_is_banned_default_reason" = "Посилання, за яким Ви спробували перейти, може вести на сайт, що був створений з метою обману користувачів і отримання шляхом цього неправомірного прибутку.";
 "url_is_banned_title" = "Посилання на підозрілий сайт";
 "url_is_banned_proceed" = "Перейти за посиланням";
+
+/* Maintenance */
+
+"global_maintenance" = "Технічні роботи";
+"section_maintenance" = "Розділ недоступний";
+"undergoing_global_maintenance" = "На жаль, зараз інстанція закрита на технічні роботи. Ми вже працюємо над усуненням неполадок. Будь ласка, спробуйте зайти пізніше.";
+"undergoing_section_maintenance" = "На жаль, розділ <b>$1</b> тимчасово недоступний. Ми вже працюємо над усуненням неполадок. Будь ласка, спробуйте зайти пізніше.";
+
+"topics" = "Теми";
