--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -921,6 +921,38 @@
 "messages_error_1" = "Повідомлення не доставлене";
 "messages_error_1_description" = "При надсиланні цього повідомлення сталася помилка загального характеру...";
 
+/* Polls */
+"poll" = "Опитування";
+"create_poll" = "Нове опитування";
+"poll_title" = "Тема опитування";
+"poll_add_option" = "Додати варіант опитування";
+"poll_anonymous" = "Анонімна відповідь";
+"poll_multiple" = "Множинний вибір";
+"poll_locked" = "Заборонити скасовувати свій голос";
+"poll_edit_expires" = "Голосування закінчується через: ";
+"poll_edit_expires_days" = "днів";
+"poll_editor_tips" = "Натискання Backspace в порожньому варіанті призводить до його видалення. Tab чи Enter в останньому варіанті додає новий варіант.";
+"poll_embed" = "Отримати код";
+
+"poll_voter_count_zero" = "Будьте <b>першим</b>, хто проголосує!";
+"poll_voter_count_one" = "В опитуванні проголосував <b>одна</b> людина.";
+"poll_voter_count_few" = "В опитуванні проголосували <b>$1</b> людини.";
+"poll_voter_count_many" = "В опитуванні проголосувало <b>$1</b> людей.";
+"poll_voter_count_other" = "В опитуванні проголосували <b>$1</b> людини.";
+
+"poll_voters_list" = "Лист голосувальників";
+
+"poll_anon" = "Анонімне голосування";
+"poll_public" = "Публічне голосування";
+"poll_multi" = "декілька відповідей";
+"poll_lock" = "не можна переголосувати";
+"poll_until" = "до $1";
+
+"poll_err_to_much_options" = "Надто багато варіантів в опитуванні.";
+"poll_err_anonymous" = "Неможливо переглянути список тих, хто проголосував в анонімному голосуванні.";
+"cast_vote" = "Проголосувати";
+"retract_vote" = "Скасувати голос";
+
 /* Discussions */
 
 "discussions" = "Обговорення";
