--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1212,3 +1212,14 @@
 "url_is_banned_default_reason" = "Ссылка, по которой вы попытались перейти, может вести на сайт, который был создан с целью обмана пользователей и получения за счёт этого прибыли.";
 "url_is_banned_title" = "Ссылка на подозрительный сайт";
 "url_is_banned_proceed" = "Перейти по ссылке";
+
+/* Maintenance */
+
+"global_maintenance" = "Технические работы";
+"section_maintenance" = "Раздел недоступен";
+"undergoing_global_maintenance" = "К сожалению, сейчас инстанс закрыт на технические работы. Мы уже работаем над устранением неисправностей. Пожалуйста, попробуйте зайти позже.";
+"undergoing_section_maintenance" = "К сожалению, раздел <b>$1</b> временно недоступен. Мы уже работаем над устранением неисправностей. Пожалуйста, попробуйте зайти позже.";
+
+"topics" = "Темы";
+
+"not_specified" = "Не указан";
