--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1186,6 +1186,28 @@
 "url_is_banned_title" = "Link to a suspicious site";
 "url_is_banned_proceed" = "Follow the link";
 
+/* Chandler */
+
+"c_user_removed_from_group" = "The user has been removed from the group";
+"c_permission_removed_from_group" = "The permission has been removed from the group";
+"c_group_removed" = "The group has been deleted.";
+"c_groups" = "Chandler Groups";
+"c_users" = "Chandler Users";
+"c_group_permissions" = "Permissions";
+"c_group_members" = "Members";
+"c_model" = "Model";
+"c_permission" = "Permission";
+"c_permissions" = "Permissions";
+"c_color" = "Color";
+"add" = "Add";
+"c_edit_groups" = "Edit Groups";
+"c_user_is_not_in_group" = "The relationship between the user and the group was not found.";
+"c_permission_not_found" = "The relationship between the permission and the group was not found.";
+"c_group_not_found" = "The group was not found.";
+"c_user_is_already_in_group" = "This user is already a member of this group.";
+"c_add_to_group" = "Add to group";
+"c_remove_from_group" = "Remove from group";
+
 /* Maintenance */
 
 "global_maintenance" = "Undergoing maintenance";
