Display the first three languages in the footer
I also changed the flag for English to Great Britain

Closes #769

--- a/locales/list.yml
+++ b/locales/list.yml
@@ -5,7 +5,7 @@ list:
     native_name: "Русский"
     author: "OpenVK Team"
   - code: "en"
-    flag: "us"
+    flag: "gb"
     name: "English"
     native_name: "English"
     author: "OpenVK Team"
